# MathIA

./: CMakeLists.txt  README.md
assets/: cornell_box.mtl
src/: Ray.cpp  Ray.hpp  main.cpp  mesh.cpp  mesh.hpp  ray.cpp  ray.hpp  tiny_obj_loader.cc  vertex.cpp  vertex.hpp
